--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,10 @@
 {% block content %}
 <h2>Welcome to Travel Together!</h2>
 <p class="muted">This is team 5's minimal reference implementation for the UC3M Web Applications project.</p>
-<br><br>
-<p class="muted">Sign in or register to get started.</p>
+<br>
+<p class="muted">Login or register to get started!</p>
 <p class="home-cta">
 	<a href="{{ url_for('auth.login') }}" role="button" class="login">Login</a>
-	<a href="{{ url_for('auth.register') }}" role="button" class="secondary">Register</a>
+	<a href="{{ url_for('auth.register') }}" role="button" class="secondary register">Register</a>
 </p>
 {% endblock %}
