--- a/templates/proposal_edit.html
+++ b/templates/proposal_edit.html
@@ -24,7 +24,7 @@
   </div>
   <div>
     <label>Budget</label>
-    <input type="number" name="budget" step="0.01" value="{{ proposal.budget if proposal.budget is not none else '' }}">
+    <input type="number" name="budget" step="0.01" min="0" value="{{ proposal.budget if proposal.budget is not none else '' }}">
   </div>
   <div>
     <label>Max participants</label>
