--- a/templates/proposal_new.html
+++ b/templates/proposal_new.html
@@ -24,7 +24,7 @@
   </div>
   <div>
     <label>Budget</label>
-    <input type="number" name="budget" step="0.01">
+    <input type="number" name="budget" step="0.01" min="0">
   </div>
   <div>
     <label>Max participants</label>
